<resources>
    <string name="app_name">COVID-19</string>
    <string name="china">China</string>
    <string name="critical">Critical :</string>
    <string name="recovered">Recovered :</string>
    <string name="countries">Countries</string>
    <string name="about">About</string>
    <string name="global">Global</string>
    <string name="global_cases">Global Cases</string>
    <string name="account_login">Account Login</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="cases">Cases</string>
    <string name="register">Register</string>
    <string name="password">Password</string>
    <string name="search">Search</string>
    <string name="info">Coronavirus disease (COVID-19) is an infectious disease caused by a newly discovered coronavirus. Most people infected with the COVID-19 virus will experience mild to moderate respiratory illness and recover without requiring special treatment. Older people, and those with underlying medical problems like cardiovascular disease, diabetes, chronic respiratory disease, and cancer are more likely to develop serious illness. The best way to prevent and slow down transmission is be well informed about the COVID-19 virus, the disease it causes and how it spreads. Protect yourself and others from infection by washing your hands or using an alcohol based rub frequently and not touching your face. The COVID-19 virus spreads primarily through droplets of saliva or discharge from the nose when an infected person coughs or sneezes, so it’s important that you also practice respiratory etiquette (for example, by coughing into a flexed elbow). At this time, there are no specific vaccines or treatments for COVID-19. However, there are many ongoing clinical trials evaluating potential treatments. WHO will continue to provide updated information as soon as clinical findings become available. Stay informed:</string>
    <string name="forgot_password">Forgot Password?</string>
</resources>
