<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewmodel"
            type="com.studycode.recyclerview.ui.auth.AuthViewModel" />
    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/root_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:scrollbarAlwaysDrawVerticalTrack="true"
        tools:context=".ui.auth.LoginActivity">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.Toolbar
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="@color/yellow">

                <TextView
                    android:id="@+id/login_title"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:gravity="center_horizontal"
                    android:text="@string/register"
                    android:textColor="#fff"
                    android:textSize="20sp"
                    android:textStyle="normal" />
            </androidx.appcompat.widget.Toolbar>

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="70dp"
                android:layout_marginRight="30dp"
                android:background="#fff"
                android:elevation="4dp"
                android:orientation="vertical"
                android:padding="20dp">

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingTop="30dp">


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif-light"
                        android:labelFor="@id/text_email"
                        android:text="Email" />

                    <EditText
                        android:id="@+id/text_email"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:drawablePadding="10dp"
                        android:inputType="textEmailAddress"
                        android:singleLine="true"
                        android:text="@={viewmodel.email}" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif-light"
                        android:labelFor="@id/edit_text_password"
                        android:text="@string/password" />

                    <EditText
                        android:id="@+id/edit_text_password"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:drawablePadding="10dp"
                        android:inputType="textPassword"
                        android:singleLine="true"
                        android:text="@={viewmodel.password}" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif-light"
                        android:labelFor="@id/edit_text_password"
                        android:text="@string/confirm_password" />

                    <EditText
                        android:id="@+id/confirm_password"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:drawablePadding="10dp"
                        android:inputType="textPassword"
                        android:singleLine="true"
                        android:text="@={viewmodel.passwordconfirm}" />

                    <Button
                        android:id="@+id/button_sign_in"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="22dp"
                        android:background="@drawable/button_rounded_corner"
                        android:onClick="@{viewmodel::signup}"
                        android:text="@string/register"
                        android:textAllCaps="false"
                        android:textColor="#fff"
                        android:textSize="18sp" />

                </LinearLayout>
                <ProgressBar
                    android:id="@+id/progressbar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:indeterminateTint="@color/yellow"
                    android:visibility="gone" />

            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:layout_alignParentBottom="true"
                android:background="@color/yellow"
                android:gravity="center"
                android:onClick="@{viewmodel::goToLogin}">

                <TextView
                    android:id="@+id/text_view_register"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="Already have an account.\nLogin"
                    android:textAlignment="center"
                    android:textColor="@color/White" />

            </LinearLayout>
        </RelativeLayout>


    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>